--- a/package.json
+++ b/package.json
@@ -43,5 +43,13 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 8.3.21.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "github.com/miltondisimone/congress-members"
+  },
+  "author": "",
+  "license": "ISC"
 }
